# copyright-app

./: .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  app.py  config.py  copyright-app.service  deploy.sh  env.example  index.html  main.py  pyproject.toml
templates/: index.html
